This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/12/23: Fixed problems with aperture commands; improved acquisition order of
combined items for hex grids, which is still nearly not optimal.

2/11/23: Made precombine.holes file not be written on an autosave, so that the
Undo button stays enabled (In 4.0).

SEM_4-1-0-beta12
2/7/23: New versions of FEI-SEMserver will not run on Windows 2000, but it
still seems to work on non-SP3 XP.

2/7/23: Used Microsoft "UI Automation" to add aperture support for FEI scopes
on Windows 7 or above to retrieve names from the Autoloader panel with
ReportSlotStatus.

2/7/23: Added options to Coma vs IS calibrtaion setup dialog and script
command to use full array for coma measurements.

2/7/23: Added dialog for setting imaging conditions before imposing first
image shift in the Step To and Adjust IS procedure for multi-shot setup.

2/7/23: Fixed ReadOtherFile command reading from montage (In 4.0).

2/7/23: Fixed memory leak in pixel size routine, used when Hole Finder is run
from the dialog (In 4.0).

2/7/23: Fixed Hole Finder not applying montage adjustments to positions when
the montage is not a map (In 4.0).

2/4/23: Fixed bad rotation of pattern in multi-hole combiner.

2/2/23: SEM_4-0-19
2/2/23: Fixed bad image shifts when changing EFTEM, broken 1/29/23 (In 4.0).

1/31/23: Added specific error message when serialem module does not have an
attribute, saying that either the command is not recognized or the module
needs updating.

1/31/23: Fixed CalibrateComaVsIS command to use entered values.

1/30/23: Fixed inversion in making IS vectors from hole vectors.

1/29/23: SEM_4-0-18
1/29/23: Prevented crash from pushing Calibrate button in coma vs. image shift
dialog when program is busy.
