@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+2/13/23: Added Condenser 3 to FEI aperture support and made it able to handle
+phase plates.
+
 2/12/23: Fixed problems with aperture commands; improved acquisition order of
 combined items for hex grids, which is still nearly not optimal.
 
